; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_main.c_bnx2x_int_mem_test.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_main.c_bnx2x_int_mem_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }

@TSDM_REG_ENABLE_IN1 = common dso_local global i64 0, align 8
@TCM_REG_PRS_IFEN = common dso_local global i64 0, align 8
@CFC_REG_DEBUG0 = common dso_local global i64 0, align 8
@NIG_REG_PRS_REQ_IN_EN = common dso_local global i64 0, align 8
@PRS_REG_CFC_SEARCH_INITIAL_CREDIT = common dso_local global i64 0, align 8
@NIG_REG_STAT2_BRB_OCTET = common dso_local global i32 0, align 4
@wb_data = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [25 x i8] c"NIG timeout  val = 0x%x\0A\00", align 1
@PRS_REG_NUM_OF_PACKETS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"PRS timeout val = 0x%x\0A\00", align 1
@GRCBASE_MISC = common dso_local global i64 0, align 8
@MISC_REGISTERS_RESET_REG_1_CLEAR = common dso_local global i64 0, align 8
@MISC_REGISTERS_RESET_REG_1_SET = common dso_local global i64 0, align 8
@BLOCK_BRB1 = common dso_local global i32 0, align 4
@PHASE_COMMON = common dso_local global i32 0, align 4
@BLOCK_PRS = common dso_local global i32 0, align 4
@NETIF_MSG_HW = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"part2\0A\00", align 1
@.str.3 = private unnamed_addr constant [25 x i8] c"PRS timeout  val = 0x%x\0A\00", align 1
@NIG_REG_INGRESS_EOP_LB_FIFO = common dso_local global i32 0, align 4
@NIG_REG_INGRESS_EOP_LB_EMPTY = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [21 x i8] c"clear of NIG failed\0A\00", align 1
@PRS_REG_NIC_MODE = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [6 x i8] c"done\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnx2x*)* @bnx2x_int_mem_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnx2x_int_mem_test(%struct.bnx2x* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bnx2x*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.bnx2x* %0, %struct.bnx2x** %3, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %9 = call i64 @CHIP_REV_IS_FPGA(%struct.bnx2x* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 120, i32* %4, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %14 = call i64 @CHIP_REV_IS_EMUL(%struct.bnx2x* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 200, i32* %4, align 4
  br label %18

17:                                               ; preds = %12
  store i32 1, i32* %4, align 4
  br label %18

18:                                               ; preds = %17, %16
  br label %19

19:                                               ; preds = %18, %11
  %20 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %21 = load i64, i64* @TSDM_REG_ENABLE_IN1, align 8
  %22 = call i32 @REG_WR(%struct.bnx2x* %20, i64 %21, i32 0)
  %23 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %24 = load i64, i64* @TCM_REG_PRS_IFEN, align 8
  %25 = call i32 @REG_WR(%struct.bnx2x* %23, i64 %24, i32 0)
  %26 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %27 = load i64, i64* @CFC_REG_DEBUG0, align 8
  %28 = call i32 @REG_WR(%struct.bnx2x* %26, i64 %27, i32 1)
  %29 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %30 = load i64, i64* @NIG_REG_PRS_REQ_IN_EN, align 8
  %31 = call i32 @REG_WR(%struct.bnx2x* %29, i64 %30, i32 0)
  %32 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %33 = load i64, i64* @PRS_REG_CFC_SEARCH_INITIAL_CREDIT, align 8
  %34 = call i32 @REG_WR(%struct.bnx2x* %32, i64 %33, i32 0)
  %35 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %36 = call i32 @bnx2x_lb_pckt(%struct.bnx2x* %35)
  %37 = load i32, i32* %4, align 4
  %38 = mul nsw i32 1000, %37
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %55, %19
  %40 = load i32, i32* %5, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %59

42:                                               ; preds = %39
  %43 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %44 = load i32, i32* @NIG_REG_STAT2_BRB_OCTET, align 4
  %45 = call i32 @bnx2x_read_dmae(%struct.bnx2x* %43, i32 %44, i32 2)
  %46 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %47 = load i32*, i32** @wb_data, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32* @bnx2x_sp(%struct.bnx2x* %46, i32 %49)
  %51 = load i32, i32* %50, align 4
  store i32 %51, i32* %7, align 4
  %52 = load i32, i32* %7, align 4
  %53 = icmp eq i32 %52, 16
  br i1 %53, label %54, label %55

54:                                               ; preds = %42
  br label %59

55:                                               ; preds = %42
  %56 = call i32 @usleep_range(i32 10000, i32 20000)
  %57 = load i32, i32* %5, align 4
  %58 = add nsw i32 %57, -1
  store i32 %58, i32* %5, align 4
  br label %39

59:                                               ; preds = %54, %39
  %60 = load i32, i32* %7, align 4
  %61 = icmp ne i32 %60, 16
  br i1 %61, label %62, label %65

62:                                               ; preds = %59
  %63 = load i32, i32* %7, align 4
  %64 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %63)
  store i32 -1, i32* %2, align 4
  br label %250

65:                                               ; preds = %59
  %66 = load i32, i32* %4, align 4
  %67 = mul nsw i32 1000, %66
  store i32 %67, i32* %5, align 4
  br label %68

68:                                               ; preds = %78, %65
  %69 = load i32, i32* %5, align 4
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %82

71:                                               ; preds = %68
  %72 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %73 = load i32, i32* @PRS_REG_NUM_OF_PACKETS, align 4
  %74 = call i32 @REG_RD(%struct.bnx2x* %72, i32 %73)
  store i32 %74, i32* %7, align 4
  %75 = load i32, i32* %7, align 4
  %76 = icmp eq i32 %75, 1
  br i1 %76, label %77, label %78

77:                                               ; preds = %71
  br label %82

78:                                               ; preds = %71
  %79 = call i32 @usleep_range(i32 10000, i32 20000)
  %80 = load i32, i32* %5, align 4
  %81 = add nsw i32 %80, -1
  store i32 %81, i32* %5, align 4
  br label %68

82:                                               ; preds = %77, %68
  %83 = load i32, i32* %7, align 4
  %84 = icmp ne i32 %83, 1
  br i1 %84, label %85, label %88

85:                                               ; preds = %82
  %86 = load i32, i32* %7, align 4
  %87 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %86)
  store i32 -2, i32* %2, align 4
  br label %250

88:                                               ; preds = %82
  %89 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %90 = load i64, i64* @GRCBASE_MISC, align 8
  %91 = load i64, i64* @MISC_REGISTERS_RESET_REG_1_CLEAR, align 8
  %92 = add nsw i64 %90, %91
  %93 = call i32 @REG_WR(%struct.bnx2x* %89, i64 %92, i32 3)
  %94 = call i32 @msleep(i32 50)
  %95 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %96 = load i64, i64* @GRCBASE_MISC, align 8
  %97 = load i64, i64* @MISC_REGISTERS_RESET_REG_1_SET, align 8
  %98 = add nsw i64 %96, %97
  %99 = call i32 @REG_WR(%struct.bnx2x* %95, i64 %98, i32 3)
  %100 = call i32 @msleep(i32 50)
  %101 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %102 = load i32, i32* @BLOCK_BRB1, align 4
  %103 = load i32, i32* @PHASE_COMMON, align 4
  %104 = call i32 @bnx2x_init_block(%struct.bnx2x* %101, i32 %102, i32 %103)
  %105 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %106 = load i32, i32* @BLOCK_PRS, align 4
  %107 = load i32, i32* @PHASE_COMMON, align 4
  %108 = call i32 @bnx2x_init_block(%struct.bnx2x* %105, i32 %106, i32 %107)
  %109 = load i32, i32* @NETIF_MSG_HW, align 4
  %110 = call i32 @DP(i32 %109, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %111 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %112 = load i64, i64* @TSDM_REG_ENABLE_IN1, align 8
  %113 = call i32 @REG_WR(%struct.bnx2x* %111, i64 %112, i32 0)
  %114 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %115 = load i64, i64* @TCM_REG_PRS_IFEN, align 8
  %116 = call i32 @REG_WR(%struct.bnx2x* %114, i64 %115, i32 0)
  %117 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %118 = load i64, i64* @CFC_REG_DEBUG0, align 8
  %119 = call i32 @REG_WR(%struct.bnx2x* %117, i64 %118, i32 1)
  %120 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %121 = load i64, i64* @NIG_REG_PRS_REQ_IN_EN, align 8
  %122 = call i32 @REG_WR(%struct.bnx2x* %120, i64 %121, i32 0)
  %123 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %124 = load i64, i64* @PRS_REG_CFC_SEARCH_INITIAL_CREDIT, align 8
  %125 = call i32 @REG_WR(%struct.bnx2x* %123, i64 %124, i32 0)
  store i32 0, i32* %6, align 4
  br label %126

126:                                              ; preds = %132, %88
  %127 = load i32, i32* %6, align 4
  %128 = icmp slt i32 %127, 10
  br i1 %128, label %129, label %135

129:                                              ; preds = %126
  %130 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %131 = call i32 @bnx2x_lb_pckt(%struct.bnx2x* %130)
  br label %132

132:                                              ; preds = %129
  %133 = load i32, i32* %6, align 4
  %134 = add nsw i32 %133, 1
  store i32 %134, i32* %6, align 4
  br label %126

135:                                              ; preds = %126
  %136 = load i32, i32* %4, align 4
  %137 = mul nsw i32 1000, %136
  store i32 %137, i32* %5, align 4
  br label %138

138:                                              ; preds = %154, %135
  %139 = load i32, i32* %5, align 4
  %140 = icmp ne i32 %139, 0
  br i1 %140, label %141, label %158

141:                                              ; preds = %138
  %142 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %143 = load i32, i32* @NIG_REG_STAT2_BRB_OCTET, align 4
  %144 = call i32 @bnx2x_read_dmae(%struct.bnx2x* %142, i32 %143, i32 2)
  %145 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %146 = load i32*, i32** @wb_data, align 8
  %147 = getelementptr inbounds i32, i32* %146, i64 0
  %148 = load i32, i32* %147, align 4
  %149 = call i32* @bnx2x_sp(%struct.bnx2x* %145, i32 %148)
  %150 = load i32, i32* %149, align 4
  store i32 %150, i32* %7, align 4
  %151 = load i32, i32* %7, align 4
  %152 = icmp eq i32 %151, 176
  br i1 %152, label %153, label %154

153:                                              ; preds = %141
  br label %158

154:                                              ; preds = %141
  %155 = call i32 @usleep_range(i32 10000, i32 20000)
  %156 = load i32, i32* %5, align 4
  %157 = add nsw i32 %156, -1
  store i32 %157, i32* %5, align 4
  br label %138

158:                                              ; preds = %153, %138
  %159 = load i32, i32* %7, align 4
  %160 = icmp ne i32 %159, 176
  br i1 %160, label %161, label %164

161:                                              ; preds = %158
  %162 = load i32, i32* %7, align 4
  %163 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %162)
  store i32 -3, i32* %2, align 4
  br label %250

164:                                              ; preds = %158
  %165 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %166 = load i32, i32* @PRS_REG_NUM_OF_PACKETS, align 4
  %167 = call i32 @REG_RD(%struct.bnx2x* %165, i32 %166)
  store i32 %167, i32* %7, align 4
  %168 = load i32, i32* %7, align 4
  %169 = icmp ne i32 %168, 2
  br i1 %169, label %170, label %173

170:                                              ; preds = %164
  %171 = load i32, i32* %7, align 4
  %172 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0), i32 %171)
  br label %173

173:                                              ; preds = %170, %164
  %174 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %175 = load i64, i64* @PRS_REG_CFC_SEARCH_INITIAL_CREDIT, align 8
  %176 = call i32 @REG_WR(%struct.bnx2x* %174, i64 %175, i32 1)
  %177 = load i32, i32* %4, align 4
  %178 = mul nsw i32 10, %177
  %179 = call i32 @msleep(i32 %178)
  %180 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %181 = load i32, i32* @PRS_REG_NUM_OF_PACKETS, align 4
  %182 = call i32 @REG_RD(%struct.bnx2x* %180, i32 %181)
  store i32 %182, i32* %7, align 4
  %183 = load i32, i32* %7, align 4
  %184 = icmp ne i32 %183, 3
  br i1 %184, label %185, label %188

185:                                              ; preds = %173
  %186 = load i32, i32* %7, align 4
  %187 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0), i32 %186)
  br label %188

188:                                              ; preds = %185, %173
  store i32 0, i32* %6, align 4
  br label %189

189:                                              ; preds = %196, %188
  %190 = load i32, i32* %6, align 4
  %191 = icmp slt i32 %190, 11
  br i1 %191, label %192, label %199

192:                                              ; preds = %189
  %193 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %194 = load i32, i32* @NIG_REG_INGRESS_EOP_LB_FIFO, align 4
  %195 = call i32 @REG_RD(%struct.bnx2x* %193, i32 %194)
  br label %196

196:                                              ; preds = %192
  %197 = load i32, i32* %6, align 4
  %198 = add nsw i32 %197, 1
  store i32 %198, i32* %6, align 4
  br label %189

199:                                              ; preds = %189
  %200 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %201 = load i32, i32* @NIG_REG_INGRESS_EOP_LB_EMPTY, align 4
  %202 = call i32 @REG_RD(%struct.bnx2x* %200, i32 %201)
  store i32 %202, i32* %7, align 4
  %203 = load i32, i32* %7, align 4
  %204 = icmp ne i32 %203, 1
  br i1 %204, label %205, label %207

205:                                              ; preds = %199
  %206 = call i32 (i8*, ...) @BNX2X_ERR(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0))
  store i32 -4, i32* %2, align 4
  br label %250

207:                                              ; preds = %199
  %208 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %209 = load i64, i64* @GRCBASE_MISC, align 8
  %210 = load i64, i64* @MISC_REGISTERS_RESET_REG_1_CLEAR, align 8
  %211 = add nsw i64 %209, %210
  %212 = call i32 @REG_WR(%struct.bnx2x* %208, i64 %211, i32 3)
  %213 = call i32 @msleep(i32 50)
  %214 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %215 = load i64, i64* @GRCBASE_MISC, align 8
  %216 = load i64, i64* @MISC_REGISTERS_RESET_REG_1_SET, align 8
  %217 = add nsw i64 %215, %216
  %218 = call i32 @REG_WR(%struct.bnx2x* %214, i64 %217, i32 3)
  %219 = call i32 @msleep(i32 50)
  %220 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %221 = load i32, i32* @BLOCK_BRB1, align 4
  %222 = load i32, i32* @PHASE_COMMON, align 4
  %223 = call i32 @bnx2x_init_block(%struct.bnx2x* %220, i32 %221, i32 %222)
  %224 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %225 = load i32, i32* @BLOCK_PRS, align 4
  %226 = load i32, i32* @PHASE_COMMON, align 4
  %227 = call i32 @bnx2x_init_block(%struct.bnx2x* %224, i32 %225, i32 %226)
  %228 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %229 = call i32 @CNIC_SUPPORT(%struct.bnx2x* %228)
  %230 = icmp ne i32 %229, 0
  br i1 %230, label %235, label %231

231:                                              ; preds = %207
  %232 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %233 = load i64, i64* @PRS_REG_NIC_MODE, align 8
  %234 = call i32 @REG_WR(%struct.bnx2x* %232, i64 %233, i32 1)
  br label %235

235:                                              ; preds = %231, %207
  %236 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %237 = load i64, i64* @TSDM_REG_ENABLE_IN1, align 8
  %238 = call i32 @REG_WR(%struct.bnx2x* %236, i64 %237, i32 2147483647)
  %239 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %240 = load i64, i64* @TCM_REG_PRS_IFEN, align 8
  %241 = call i32 @REG_WR(%struct.bnx2x* %239, i64 %240, i32 1)
  %242 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %243 = load i64, i64* @CFC_REG_DEBUG0, align 8
  %244 = call i32 @REG_WR(%struct.bnx2x* %242, i64 %243, i32 0)
  %245 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %246 = load i64, i64* @NIG_REG_PRS_REQ_IN_EN, align 8
  %247 = call i32 @REG_WR(%struct.bnx2x* %245, i64 %246, i32 1)
  %248 = load i32, i32* @NETIF_MSG_HW, align 4
  %249 = call i32 @DP(i32 %248, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %250

250:                                              ; preds = %235, %205, %161, %85, %62
  %251 = load i32, i32* %2, align 4
  ret i32 %251
}

declare dso_local i64 @CHIP_REV_IS_FPGA(%struct.bnx2x*) #1

declare dso_local i64 @CHIP_REV_IS_EMUL(%struct.bnx2x*) #1

declare dso_local i32 @REG_WR(%struct.bnx2x*, i64, i32) #1

declare dso_local i32 @bnx2x_lb_pckt(%struct.bnx2x*) #1

declare dso_local i32 @bnx2x_read_dmae(%struct.bnx2x*, i32, i32) #1

declare dso_local i32* @bnx2x_sp(%struct.bnx2x*, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i32 @BNX2X_ERR(i8*, ...) #1

declare dso_local i32 @REG_RD(%struct.bnx2x*, i32) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @bnx2x_init_block(%struct.bnx2x*, i32, i32) #1

declare dso_local i32 @DP(i32, i8*) #1

declare dso_local i32 @CNIC_SUPPORT(%struct.bnx2x*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
